--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==4.0.1
+certifi==2025.10.5
 click==8.3.0
+dotenv==0.9.9
 fastapi==0.117.1
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+jose==1.0.0
 Mako==1.3.10
 MarkupSafe==3.0.2
+passlib==1.7.4
 pydantic==2.11.9
 pydantic_core==2.33.2
+PyJWT==2.10.1
+python-dotenv==1.1.1
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 sqlmodel==0.0.25
